--- a/plugins/sqlmap/Dockerfile
+++ b/plugins/sqlmap/Dockerfile
@@ -1,30 +1,24 @@
-FROM komand/python-2-plugin:2
-# The three supported python parent images are:
-# - komand/python-2-plugin
-# - komand/python-3-plugin
-# - komand/python-pypy3-plugin
-#
-# Update the tag to a full semver version
+FROM rapid7/insightconnect-python-3-38-plugin:5
 
-# Add any custom package dependencies here
-# NOTE: Add pip packages to requirements.txt
-ENV SQLMAP_VERSION master
+LABEL organization=rapid7
+LABEL sdk=python
+
 RUN apt-get update && \
     apt-get -y install wget
-RUN wget https://github.com/sqlmapproject/sqlmap/archive/$SQLMAP_VERSION.tar.gz && \
-    tar -xf master.tar.gz
 
-# End package dependencies
+ENV SQLMAP_VERSION master
 
-# Add source code
 WORKDIR /python/src
 ADD ./plugin.spec.yaml /plugin.spec.yaml
 ADD . /python/src
 
-# Install pip dependencies
+RUN wget https://github.com/sqlmapproject/sqlmap/archive/$SQLMAP_VERSION.tar.gz && \
+    tar -xf master.tar.gz
+
 RUN if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
 
-# Install plugin
-RUN python setup.py build && python setup.py install
+RUN	python setup.py build && python setup.py install
 
-ENTRYPOINT ["/usr/local/bin/komand_sqlmap"]
+# User to run plugin code. The two supported users are: root, nobody
+
+ENTRYPOINT ["/usr/local/bin/icon_sqlmap"]
