--- a/plugins/komand/plugin.spec.yaml
+++ b/plugins/komand/plugin.spec.yaml
@@ -8,7 +8,7 @@ version: 1.0.4
 supported_versions: ["2023-05-15"]
 vendor: rapid7
 support: community
-status: []
+status: [obsolete]
 resources:
   source_url: https://github.com/rapid7/insightconnect-plugins/tree/master/plugins/komand
   license_url: https://github.com/rapid7/insightconnect-plugins/blob/master/LICENSE
