--- a/plugins/komand/plugin.spec.yaml
+++ b/plugins/komand/plugin.spec.yaml
@@ -7,7 +7,7 @@ description: Komand Meta-Actions
 version: 1.0.3
 vendor: rapid7
 support: community
-status: []
+status: [obsolete]
 resources:
   source_url: https://github.com/rapid7/insightconnect-plugins/tree/master/plugins/komand
   license_url: https://github.com/rapid7/insightconnect-plugins/blob/master/LICENSE
