--- a/plugins/okta/plugin.spec.yaml
+++ b/plugins/okta/plugin.spec.yaml
@@ -23,7 +23,7 @@ hub_tags:
   use_cases: [application_management, user_management]
   keywords: [sso, provisioning, deprovisioning, saml, cloud_enabled]
   features: []
-enable_cache: true
+enable_cache: false
 types:
   provider:
     type:
