--- a/plugins/threat_connect/requirements.txt
+++ b/plugins/threat_connect/requirements.txt
@@ -2,3 +2,4 @@
 # All dependencies must be version-pinned, eg. requests==1.2.0
 # See: https://pip.pypa.io/en/stable/user_guide/#requirements-files
 threatconnect==2.4.18
+requests==2.31.0
