--- a/plugins/rapid7_insight_agent/plugin.spec.yaml
+++ b/plugins/rapid7_insight_agent/plugin.spec.yaml
@@ -5,7 +5,7 @@ name: rapid7_insight_agent
 title: Rapid7 Insight Agent
 description: Using the Insight Agent plugin from InsightConnect, you can quarantine, unquarantine and monitor potentially malicious IPs, addresses, hostnames, and devices across your organization
 version: 2.0.0
-supported_versions: ["Rapid7 Insight Agent 2023-04-06"]
+supported_versions: ["Rapid7 Insight Agent 2023-06-02"]
 vendor: rapid7
 support: rapid7
 status: []
@@ -148,6 +148,17 @@ types:
       type: string
       description: Platform
       required: false
+  quarantine_multiple_error:
+    hostname:
+      title: Hostname
+      type: string
+      description: Hostname
+      required: false
+    error:
+      title: Error
+      type: string
+      description: Error
+      required: false
 connection:
   api_key:
     title: API Key
@@ -199,8 +210,8 @@ actions:
       failed:
         title: Failed
         description: List of unsuccessfully quarantined hosts
-        type: "[]string"
-        example: ["abcdef123"]
+        type: "[]quarantine_multiple_error"
+        example: [{"hostname": "abcdef123", "error": "Hostname could not be found"}]
         required: false
       completed:
         title: Completed
