--- a/plugins/rapid7_insight_agent/plugin.spec.yaml
+++ b/plugins/rapid7_insight_agent/plugin.spec.yaml
@@ -4,8 +4,8 @@ products: [insightconnect]
 name: rapid7_insight_agent
 title: Rapid7 Insight Agent
 description: Using the Insight Agent plugin from InsightConnect, you can quarantine, unquarantine and monitor potentially malicious IPs, addresses, hostnames, and devices across your organization
-version: 1.2.0
-supported_versions: ["Rapid7 Insight Agent 2023-04-06"]
+version: 2.0.0
+supported_versions: ["Rapid7 Insight Agent 2023-06-02"]
 vendor: rapid7
 support: rapid7
 status: []
@@ -148,6 +148,17 @@ types:
       type: string
       description: Platform
       required: false
+  quarantine_multiple_error:
+    hostname:
+      title: Hostname
+      type: string
+      description: Hostname
+      required: false
+    error:
+      title: Error
+      type: string
+      description: Error
+      required: false
 connection:
   api_key:
     title: API Key
@@ -196,23 +207,17 @@ actions:
         example: true
         required: true
     output:
-      success:
-        title: Successful (Un)Quarantine
+      failed:
+        title: Failed
+        description: List of unsuccessfully quarantined hosts
+        type: "[]quarantine_multiple_error"
+        example: [{"hostname": "abcdef123", "error": "Hostname could not be found"}]
+        required: false
+      completed:
+        title: Completed
         description: List of successfully quarantined hosts
         type: "[]string"
         example: ["abcdef123"]
-        required: false
-      failure:
-        title: Unsuccessful (Un)Quarantine
-        description: List of unsuccessfully quarantined hosts
-        type: "[]string"
-        example: ["abcdef123"]
-        required: false
-      all_operations_succeeded:
-        title: All Operations Succeeded
-        description: Informs a user any operations failed the (un)quarantine operations
-        type: boolean
-        example: true
         required: false
   get_agent_details:
     title: Get Agent Details
