--- a/plugins/mimecast/plugin.spec.yaml
+++ b/plugins/mimecast/plugin.spec.yaml
@@ -5,7 +5,8 @@ name: mimecast
 title: Mimecast
 description: Services for email security, archiving and continuity. Protect, manage
   and archive without compromise
-version: 5.2.0
+version: 5.2.1
+connection_version: 5
 supported_versions: ["Mimecast API 2022-11-07"]
 vendor: rapid7
 support: rapid7
