--- a/plugins/duo_admin/plugin.spec.yaml
+++ b/plugins/duo_admin/plugin.spec.yaml
@@ -10,6 +10,7 @@ status: []
 supported_versions: ["Duo Admin API 2023-05-19"]
 description: Duo is a trusted access solution for organizations. The Duo Admin plugin for Rapid7 InsightConnect allows users to manage and administrate their Duo organization
 version: 4.0.0
+connection_version: 4
 resources:
   source_url: https://github.com/rapid7/insightconnect-plugins/tree/master/plugins/duo_admin
   license_url: https://github.com/rapid7/insightconnect-plugins/blob/master/LICENSE
