--- a/plugins/rest/plugin.spec.yaml
+++ b/plugins/rest/plugin.spec.yaml
@@ -127,21 +127,25 @@ actions:
         description: Response payload from the server as an object. Note, if the response has invalid object structure (list, string..) plugin will wrap it with object map
         type: object
         required: false
+        example: {"user": "user@example.com"}
       body_string:
         title: Body String
         description: Response payload from the server as a string
         type: string
         required: false
+        example: 'test data'
       status:
         title: Status
         description: Status code of the response from the server
         type: integer
         required: false
+        example: 200
       headers:
         title: Headers
         description: Response headers from the server
         type: object
         required: false
+        example: {"Host": "rapid7.com"}
   post:
     title: POST
     description: Make a POST request
@@ -176,21 +180,25 @@ actions:
         description: Response payload from the server as an object
         type: object
         required: false
+        example: {"user": "user@example.com"}
       body_string:
         title: Body String
         description: Response payload from the server as a string
         type: string
         required: false
+        example: 'test data'
       status:
         title: Status
         description: Status code of the response from the server
         type: integer
         required: false
+        example: 200
       headers:
         title: Headers
         description: Response headers from the server
         type: object
         required: false
+        example: {"Host": "rapid7.com"}
   put:
     title: PUT
     description: Make a PUT request
@@ -225,21 +233,25 @@ actions:
         description: Response payload from the server as an object
         type: object
         required: false
+        example: {"user": "user@example.com"}
       body_string:
         title: Body String
         description: Response payload from the server as a string
         type: string
         required: false
+        example: 'test data'
       status:
         title: Status
         description: Status code of the response from the server
         type: integer
         required: false
+        example: 200
       headers:
         title: Headers
         description: Response headers from the server
         type: object
         required: false
+        example: {"Host": "rapid7.com"}
   patch:
     title: PATCH
     description: Make a PATCH request
@@ -274,21 +286,25 @@ actions:
         description: Response payload from the server as an object
         type: object
         required: false
+        example: {"user": "user@example.com"}
       body_string:
         title: Body String
         description: Response payload from the server as a string
         type: string
         required: false
+        example: "test data"
       status:
         title: Status
         description: Status code of the response from the server
         type: integer
         required: false
+        example: 200
       headers:
         title: Headers
         description: Response headers from the server
         type: object
         required: false
+        example: {"Host": "rapid7.com"}
   delete:
     title: DELETE
     description: Make a DELETE request
@@ -323,18 +339,22 @@ actions:
         description: Response payload from the server as an object
         type: object
         required: false
+        example: {"user": "user@example.com"}
       body_string:
         title: Body String
         description: Response payload from the server as a string
         type: string
         required: false
+        example: "test data"
       status:
         title: Status
         description: Status code of the response from the server
         type: integer
         required: false
+        example: 200
       headers:
         title: Headers
         description: Response headers from the server
         type: object
         required: false
+        example: {"Host": "rapid7.com"}
