--- a/plugins/rest/plugin.spec.yaml
+++ b/plugins/rest/plugin.spec.yaml
@@ -170,14 +170,14 @@ actions:
         example: '{"user": "user@example.com"}'
       body_any:
         title: Body (Any)
-        description: Payload (string) to submit to the server when making the HTTP Request call. This can be any type of input, such as an array or integers etc
+        description: Payload (string) to submit to the server when making the HTTP Request call. This can be any type of input, such as an array or integers etc.. If a data object is to be sent, please use the 'Body Object' input
         type: string
         required: false
         example: 'test data'
     output:
       body_object:
         title: Body Object
-        description: Response payload from the server as an object
+        description: Response payload from the server as an object. Note, if the response has invalid object structure (list, string..) plugin will wrap it with object map
         type: object
         required: false
         example: {"user": "user@example.com"}
@@ -223,14 +223,14 @@ actions:
         example: '{"user": "user@example.com"}'
       body_any:
         title: Body (Any)
-        description: Payload (string) to submit to the server when making the HTTP Request call. This can be any type of input, such as an array or integers etc
+        description: Payload (string) to submit to the server when making the HTTP Request call. This can be any type of input, such as an array or integers etc.. If a data object is to be sent, please use the 'Body Object' input
         type: string
         required: false
         example: 'test data'
     output:
       body_object:
         title: Body Object
-        description: Response payload from the server as an object
+        description: Response payload from the server as an object. Note, if the response has invalid object structure (list, string..) plugin will wrap it with object map
         type: object
         required: false
         example: {"user": "user@example.com"}
@@ -276,14 +276,14 @@ actions:
         example: '{"user": "user@example.com"}'
       body_any:
         title: Body (Any)
-        description: Payload (string) to submit to the server when making the HTTP Request call. This can be any type of input, such as an array or integers etc
+        description: Payload (string) to submit to the server when making the HTTP Request call. This can be any type of input, such as an array or integers etc.. If a data object is to be sent, please use the 'Body Object' input
         type: string
         required: false
         example: 'test data'
     output:
       body_object:
         title: Body Object
-        description: Response payload from the server as an object
+        description: Response payload from the server as an object. Note, if the response has invalid object structure (list, string..) plugin will wrap it with object map
         type: object
         required: false
         example: {"user": "user@example.com"}
@@ -329,14 +329,14 @@ actions:
         example: '{"user": "user@example.com"}'
       body_any:
         title: Body (Any)
-        description: Payload (string) to submit to the server when making the HTTP Request call. This can be any type of input, such as an array or integers etc
+        description: Payload (string) to submit to the server when making the HTTP Request call. This can be any type of input, such as an array or integers etc.. If a data object is to be sent, please use the 'Body Object' input
         type: string
         required: false
         example: 'test data'
     output:
       body_object:
         title: Body Object
-        description: Response payload from the server as an object
+        description: Response payload from the server as an object. Note, if the response has invalid object structure (list, string..) plugin will wrap it with object map
         type: object
         required: false
         example: {"user": "user@example.com"}
