--- a/plugins/vmray/Dockerfile
+++ b/plugins/vmray/Dockerfile
@@ -1,4 +1,4 @@
-FROM komand/python-pypy3-full-plugin
+FROM rapid7/insightconnect-python-3-38-slim-plugin:5
 # The three supported python parent images are:
 # - komand/python-2-plugin
 # - komand/python-3-plugin
@@ -20,5 +20,8 @@ RUN if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
 
 # Install plugin
 RUN python setup.py build && python setup.py install
+
+# needed for SSL Verify
+USER nobody
 
 ENTRYPOINT ["/usr/local/bin/komand_vmray"]
