--- a/plugins/zoom/Dockerfile
+++ b/plugins/zoom/Dockerfile
@@ -4,10 +4,13 @@ LABEL organization=rapid7
 LABEL sdk=python
 
 WORKDIR /python/src
+
 ADD ./plugin.spec.yaml /plugin.spec.yaml
-ADD . /python/src
+ADD ./requirements.txt /python/src/requirements.txt
 
 RUN if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
+
+ADD . /python/src
 
 RUN	python setup.py build && python setup.py install
 
