--- a/plugins/zoom/plugin.spec.yaml
+++ b/plugins/zoom/plugin.spec.yaml
@@ -20,6 +20,10 @@ resources:
   license_url: https://github.com/rapid7/insightconnect-plugins/blob/master/LICENSE
   vendor_url: https://www.zoom.com/
 enable_cache: false
+sdk:
+  type: full
+  version: 4
+  user: nobody
 
 connection:
   client_id:
@@ -55,7 +59,7 @@ types:
       description: Email address of the user used for the activity
       type: string
       required: true
-      exmaple: user@example.com
+      example: user@example.com
     time:
       title: Time
       description: Time during which the activity occurred in 'yyyy-mm-ddThh:mm:ssZ' format
