--- a/plugins/zoom/plugin.spec.yaml
+++ b/plugins/zoom/plugin.spec.yaml
@@ -37,7 +37,7 @@ connection:
     description: Zoom app client secret, required for OAuth authentication
     type: credential_secret_key
     required: true
-    example: 9de5069c5afe602b2ea0a04b66beb2c0
+    example: '{"secretKey": "9de5069c5afe602b2ea0a04b66beb2c0"}'
   account_id:
     title: Account ID
     description: Zoom app account ID, required for OAuth authentication
